# vastai-gpu-runner

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yaml  ruff.yaml  validate.yaml
docs/: api.md  architecture-v2.md  architecture.md  extending.md  guide.md  roadmap.md  userstories.md  vision.md
src/vastai_gpu_runner/: __init__.py  batch.py  cli.py  hybrid.py  orchestrator.py  runner.py  ssh.py  state.py  types.py
src/vastai_gpu_runner/estimator/: __init__.py  core.py  pricing.py
src/vastai_gpu_runner/providers/: __init__.py  vastai.py
src/vastai_gpu_runner/storage/: __init__.py  r2.py
src/vastai_gpu_runner/worker/: __init__.py  base.py  health.py
tests/: conftest.py  test_batch.py  test_batch_orchestrator.py  test_estimator.py  test_hybrid.py  test_orchestrator.py  test_runner.py  test_ssh.py  test_state.py  test_types.py  test_worker_base.py
