[project]
name = "vastai-gpu-runner"
version = "0.1.0"
description = "Cloud GPU orchestration framework for Vast.ai — batch deployment, R2 storage, worker lifecycle"
requires-python = ">=3.11"
authors = [{ name = "antomicblitz" }]

dependencies = [
    "boto3>=1.28",
    "requests>=2.31",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
vastai-gpu-runner = "vastai_gpu_runner.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vastai_gpu_runner"]

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "D",   # pydocstyle
    "RUF", # ruff-specific
]
ignore = [
    "D100",  # missing module docstring (too noisy for __init__)
    "D104",  # missing public package docstring
    "S603",  # subprocess call with shell=False (intentional)
    "S607",  # partial executable path (intentional for CLI tools)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "S108", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# --- Pyright ---
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
